content/kubermatic/v2.13/advanced/user_settings/_index.en.md
+++
title = "Kubermatic Kubernetes Platform(KKP) User Settings"
date = 2020-04-01T14:07:15+02:00
weight = 1

+++

This manual explains how to manage KKP user settings via the UI.

### Accessing the User Settings
To access the user settings view click the `Account` entry in the user menu:

![User menu](/img/kubermatic/v2.13/advanced/user-settings/menu.png)

### User Settings Overview

![User settings view](/img/kubermatic/v2.13/advanced/user-settings/view.png)

The user settings view is devided into two columns:
The left side contains all account details, such as the name and the email of the user, whereas the right side lists all possible settings that a user can make.

  * `Items per page` will change the number of visible items per page in a table. It will be applied to all tables within kubermatic.

All settings changes are saved asynchronously, and the saves are confirmed by the green confirmation icons next to changed settings. Changes are automatically populated to all opened instances of the application.
